# GameNative-Performance

./: .gitignore  Findings_analysis.txt  README.md  app_log.txt  changelog.txt  manifest.json  wine_debug.log.txt
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/schemas/app.gamenative.db.PluviaDatabase/: 13.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/graphics_driver/: adrenotools-Turnip_Gen8_V23.tzst  wrapper.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/extras/: CMakeLists.txt  evshim.c  gpu_image.c
app/src/main/cpp/winlator/: alsa_client.c  evshim.c  gpu_image.c  xconnector_epoll.c
app/src/main/res/drawable/: content_dialog_background.xml  hud_background.xml  icon_motion_controls.xml  icon_pause.xml  seekbar_progress.xml  seekbar_thumb.xml
app/src/main/res/layout/: content_dialog.xml  navigation_dialog.xml  osc_transparency_dialog.xml  performance_hud.xml  touch_transparency_dialog.xml  transparency_dialog.xml
app/src/main/res/values/: arrays.xml  (+4 more)
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: arrays.xml  strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
(+239 files in other folders)
